--- a/css/scene-joker.css
+++ b/css/scene-joker.css
@@ -34,24 +34,6 @@ body {
     color: black;
 }
 
-.pixel-container {
-    width: 1px;
-    height: 1px;
-
-    width: 0.05vw;
-    height: 0.08vh;
-}
-
-.pixel-container > div {
-    position: relative;
-
-    top: 374px;
-    width: 11px;
-
-    top: 19.5vw;
-    width: 5.8vw;
-}
-
 /*TODO : remove duplicates*/
 .info-block > h1 {
     font-weight: 700;
